@@ -1,5 +1,9 @@
 === 1.4.4 / Unreleased
 
+* New Features
+
+  * XML::Node#children= sets the node's inner html (much like #inner_html=), but returns the reparent node(s).
+
 * Bugfixes
 
   * XML::DTD#attributes returns an empty hash instead of nil when there are no attributes.
